fixing dark mode

--- a/ui/src/css/global.css
+++ b/ui/src/css/global.css
@@ -10,9 +10,6 @@ body {
   margin: 0;
   font-family: var(--body-font-family);
   line-height: var(--body-line-height);
-  transition: background-color 0.3s ease, color 0.3s ease;
-  background-color: var(--background-color);
-  color: var(--text-color);
 }
 
 img {
